# bunnyfetch

./: .gitignore  Cargo.toml  LICENSE  README.md  go.mod  go.sum  log.txt  main.go
.github/actions/: main.yml
.github/workflows/: build.yml  linux.yml  macos.yml  main.yml  release.yaml  release.yml  windows.yml
cmd/: bunnyfetch.go  info.go  info_darwin.go  info_linux.go  info_windows.go
src/: colors.rs  lib.rs  main.rs
