[package]
name = "bunnyfetch"
version = "0.1.4"
authors = ["TorchedSammy"]
edition = "2018"
description = "🐰 Tiny system info fetch utility and library."
repository = "https://github.com/Mewyuna/Bunnyfetch"
license = "MIT"
keywords = ["cli", "windows", "linux", "utility"]
categories = ["command-line-utilities"]
exclude = [".github/**"]

[dependencies]

[profile.release]
lto = true
opt-level = "s"
codegen-units = 2
